fix width for minimal amount field on mobile

--- a/src/pages/DonationPage/sections/MainComponent.module.css
+++ b/src/pages/DonationPage/sections/MainComponent.module.css
@@ -88,6 +88,12 @@
   margin-right: 4px;
 }
 
+@media (max-width: 1200px) {
+  .minimaldescription {
+    width: unset;
+  }
+}
+
 .minimalamount {
   color: var(--oda-control-color);
   text-decoration: underline;
